# dirisa_weekend_project

./: README.md  main.py  pyproject.toml  requirements.txt  setup.md
__marimo__/session/: main.py.json
instructions/: create-venv.md  instructions.md
notebooks/: main.ipynb
