[project]
name = "dirisa-weekend-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "marimo>=0.14.7",
    "matplotlib>=3.10.3",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sqlalchemy<2",
]
